--- a/Clash_config.yaml
+++ b/Clash_config.yaml
@@ -71,9 +71,9 @@ custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=💗 香港`select`🇭🇰 香港节点`[]🚀 节点选择`[]DIRECT`[]REJECT
-custom_proxy_group=💗 日本`select`🇭🇰 香港节点`[]🚀 节点选择`[]DIRECT`[]REJECT
-custom_proxy_group=💗 美国`select`🇺🇲 美国节点`[]🚀 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=💗 香港`select`[]🇭🇰 香港节点`[]🚀 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=💗 日本`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]DIRECT`[]REJECT
+custom_proxy_group=💗 美国`select`[]🇺🇲 美国节点`[]🚀 节点选择`[]DIRECT`[]REJECT
 ;设置分组标志位
 
 enable_rule_generator=true
