--- a/ACL4SSR_Online_Full_Linnico.ini
+++ b/ACL4SSR_Online_Full_Linnico.ini
@@ -1,4 +1,4 @@
-exclude_remarks=(Data Left|Traffic:|Expir[ey]|剩[余餘]流量|[到过過效]期|[时時][间間]|分割线|群组|订阅|官网|套餐|重置)
+; exclude_remarks=(Data Left|Traffic:|Expir[ey]|剩[余餘]流量|[到过過效]期|[时時][间間]|分割线|群组|订阅|官网|套餐|重置)
 
 ;设置规则标志位
 ruleset=🇭🇰 香港节点,https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/DLsite.list
