--- a/ACL4SSR_Online_Full_Linnico.ini
+++ b/ACL4SSR_Online_Full_Linnico.ini
@@ -8,7 +8,7 @@
 ;苹果分流：支持
 ;增强中国IP段：支持
 ;增强国外GFW：支持
-
+target=clash
 exclude_remarks=(Data Left|Traffic:|Expir[ey]|剩[余餘]流量|[到过過效]期|[时時][间間]|分割线|群组|订阅|官网|套餐|重置)
 
 add_emoji=true
@@ -226,9 +226,9 @@ emoji=^(?!.*(?!🇨🇳)[🇦-🇿]{2}).*(?i:(?<![\da-z.])(HKG?|CMI|HGC|HKT|HKBN
 emoji=^(?!.*(?!🇨🇳)[🇦-🇿]{2}).*(?i:(?<![\da-z.])CH?N(?!\d*[a-z])|China),🇨🇳
 
 ;设置规则标志位
-ruleset=💗 DLsite,https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/dlsite.list
-ruleset=💗 ExHentai,https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/exhentai.list
-ruleset=💗 日本站点,https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/JP.list
+ruleset=💗 DLsite,clash-domain:https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/dlsite.txt,86400
+ruleset=💗 ExHentai,clash-domain:https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/exhentai.txt,86400
+ruleset=💗 日本站点,clash-domain:https://raw.githubusercontent.com/LinnicoXin/clash-rules/main/rules/JP.txt,86400
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -301,3 +301,5 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+rule-providers=
