--- a/ACL4SSR_Online_Full_Linnico2.ini
+++ b/ACL4SSR_Online_Full_Linnico2.ini
@@ -2,15 +2,8 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则_Linnico修改
 
-;去广告：支持
-;自动测速：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
-
 ;排除匹配到的节点
-exclude_remarks=(Data Left|Traffic:|Expir[ey]|剩[余餘]流量|[到过過效]期|[时時][间間]|分割线|群组|订阅|官网|套餐|重置)
+exclude_remarks=(Data Left|Traffic:|Expir[ey]|剩[余餘]流量|[到过過效]期|[时時][间間]|分割线|群组|订阅|官网|套餐|重置|永久|邀请)
 
 ;设置规则标志位
 ;ruleset=Domestic Services,clash-domain:https://ruleset.dev/clash_domestic_services_domains,86400
